monitoring-master/monitoring-master/ingress_prometheus_grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: premetheus-grafana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /prometheus
          backend:
            serviceName: prometheus
            servicePort: 32322
        - path: /alertmanager
          backend:
            serviceName: alertmanager
            servicePort: 32323
